fixed overflow bug on contacts

--- a/styles/add-task.css
+++ b/styles/add-task.css
@@ -53,10 +53,6 @@
   color: rgb(255, 129, 144);
 }
 
-/* .opacity-1 {
-  opacity: 1 !important;
-} */
-
 .required {
   color: rgb(255, 129, 144);
 }
@@ -68,7 +64,6 @@
 .add-task-form-container {
   display: flex;
   flex-direction: column;
-  /* margin-left: 96px; */
   width: 976.25px;
 }
 
@@ -490,10 +485,6 @@ input[id="subtasks"] {
 }
 
 .subtasks-container {
-  /* display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 8px; */
   position: absolute;
   width: 440px;
   height: 120px;
@@ -572,7 +563,3 @@ input[id="subtasks"] {
 .close-button-add-task:hover {
   background-color: rgb(0, 0, 0, 0.1);
 }
-
-/* .body-add-task{
-  overflow: hidden;
-} */
