--- a/styles/contact.css
+++ b/styles/contact.css
@@ -8,6 +8,7 @@
     gap: 25px;
     padding: 15px 24px;
     border-radius: 10px;
+    width: 100%;
   }
   
   .contact-hover:hover {
@@ -18,18 +19,21 @@
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
+    width: 85%;
   }
   
   .contacts-email{
     font-size: 16px;
     font-weight: 400;
     line-height: 19.2px;
+    width: 85%;
   }
   
   .contact-name-email{
     display: flex;
     flex-direction: column;
     gap: 5px;
+    width: 90%;
   }
   
   .contacts-list{
@@ -47,6 +51,11 @@
     flex-direction: column;
     align-items: center;
     padding: 0 24px 32px 24px;
+    width: 100%;
+  }
+
+  .alphabet-list {
+    width: 100%;
   }
   
   .letter{
@@ -91,6 +100,7 @@
     flex: 1;
     margin-left: 52px;
     position: relative;
+    width: 700px;
   }
   
   .contacts-header-wrap{
@@ -166,6 +176,7 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    width: 70%;
   }
   
   .edit-and-delete{
@@ -222,6 +233,7 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 19.2px;
+    width: 80%;
   }
   
   .contacts-info-email-text,
